--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2343,11 +2343,20 @@ jobs:
         run: |
           cd ~/.spindb/containers/postgresql/docker-export-test/docker
           docker compose restart docker-export-test
-          # Wait for container to be ready again
-          for i in {1..60}; do
-            if docker compose exec -T docker-export-test pg_isready -U spindb 2>/dev/null; then
-              echo "PostgreSQL is ready after restart"
+          # Wait for SPINDB_READY marker in logs (indicates container is fully ready)
+          echo "Waiting for container to be ready after restart..."
+          for i in {1..120}; do
+            # Check for new SPINDB_READY after restart (count should be 2+)
+            READY_COUNT=$(docker compose logs docker-export-test 2>&1 | grep -c "SPINDB_READY" || true)
+            if [ "$READY_COUNT" -ge 2 ]; then
+              echo "Container ready after restart (SPINDB_READY count: $READY_COUNT)"
               break
+            fi
+            if [ $i -eq 120 ]; then
+              echo "Timeout waiting for container after restart"
+              echo "=== Container logs ==="
+              docker compose logs docker-export-test
+              exit 1
             fi
             sleep 1
           done
@@ -2356,9 +2365,19 @@ jobs:
         shell: bash
         run: |
           cd ~/.spindb/containers/postgresql/docker-export-test/docker
-          COUNT=$(docker compose exec -T docker-export-test bash -l -c "psql -U spindb -d docker_export_test -t -c 'SELECT COUNT(*) FROM test_user;'" 2>&1 | tr -d ' \n')
+          echo "=== Container logs after restart ==="
+          docker compose logs docker-export-test | tail -30
+          echo "=== Running verification query ==="
+          set +e
+          OUTPUT=$(docker compose exec -T docker-export-test bash -l -c "psql -U spindb -d docker_export_test -t -c 'SELECT COUNT(*) FROM test_user;'" 2>&1)
+          EXIT_CODE=$?
+          set -e
+          echo "psql exit code: $EXIT_CODE"
+          echo "psql output: '$OUTPUT'"
+          COUNT=$(echo "$OUTPUT" | tr -d ' \n')
           if [ "$COUNT" != "5" ]; then
             echo "Data persistence failed after restart: expected 5 rows, got '$COUNT'"
+            echo "=== Full container logs ==="
             docker compose logs docker-export-test
             exit 1
           fi
