--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,11 @@ on:
   #   branches: [dev] # TODO: change to a feature branch and uncomment to test on feature branches
   workflow_dispatch:
 
+# Cancel in-progress runs when a new push triggers the same PR
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 # =============================================================================
 # OS Coverage Strategy (Tiered)
 # =============================================================================
@@ -618,12 +623,9 @@ jobs:
   # ============================================
   # FerretDB v1 Integration Tests
   # v1 uses plain PostgreSQL backend (no DocumentDB) - supports all platforms incl. Windows
-  # Runs after test-ferretdb to avoid backend port conflicts (both use dynamic PG ports)
   # ============================================
   test-ferretdb-v1:
     name: FerretDB v1 ${{ matrix.icon }} ${{ matrix.label }}
-    needs: [test-ferretdb]
-    if: always()
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
