feat: add Weaviate engine (19th database)
AI-native vector database with REST/GraphQL and gRPC APIs.
Full lifecycle: create, start, stop, backup/restore, clone, rename, delete.
Unique internal cluster ports derived from HTTP port to avoid conflicts.
Directory-based backup/restore with backup_config.json ID matching and
node_mapping for cross-container restore. CI on all 5 platforms.

--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -1588,6 +1588,94 @@ jobs:
           }
 
   # ============================================
+  # Weaviate Integration Tests
+  # ============================================
+  test-weaviate:
+    name: Weaviate ${{ matrix.icon }} ${{ matrix.label }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: ubuntu-22.04
+            icon: 🐧
+            label: Linux x64 22.04
+          - os: ubuntu-24.04
+            icon: 🐧
+            label: Linux x64 24.04
+          - os: macos-15-intel
+            icon: 🍎
+            label: macOS x64
+          - os: macos-14
+            icon: 🍎
+            label: macOS ARM64
+          - os: windows-latest
+            icon: 🪟
+            label: Win x64
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      # Cache Weaviate binaries - these are downloaded from hostdb
+      - name: Cache Weaviate binaries
+        uses: actions/cache@v4
+        id: weaviate-cache
+        with:
+          path: ~/.spindb/bin
+          key: spindb-weaviate-1-${{ runner.os }}-${{ runner.arch }}
+
+      # Use SpinDB to download Weaviate binaries
+      - name: Install Weaviate via SpinDB
+        run: pnpm start engines download weaviate 1
+
+      - name: Show installed engines
+        run: pnpm start engines list
+
+      - name: Run Weaviate integration tests
+        run: pnpm test:engine weaviate
+        timeout-minutes: 15
+
+      - name: Show Weaviate logs on failure (Unix)
+        if: failure() && runner.os != 'Windows'
+        run: |
+          echo "=== Weaviate container directories ==="
+          ls -la ~/.spindb/containers/weaviate/ 2>/dev/null || echo "No Weaviate containers directory"
+          echo ""
+          echo "=== Weaviate binary directory ==="
+          ls -la ~/.spindb/bin/ 2>/dev/null | grep -i weaviate || echo "No Weaviate binaries found"
+          echo ""
+          echo "=== Weaviate log files ==="
+          find ~/.spindb/containers/weaviate -name "*.log" -exec echo "--- {} ---" \; -exec cat {} \; 2>/dev/null || echo "No log files found"
+
+      - name: Show Weaviate logs on failure (Windows)
+        if: failure() && runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          Write-Host "=== Weaviate container directories ==="
+          Get-ChildItem -Path "$env:USERPROFILE\.spindb\containers\weaviate" -ErrorAction SilentlyContinue | Format-Table -AutoSize
+          Write-Host ""
+          Write-Host "=== Weaviate binary directory ==="
+          Get-ChildItem -Path "$env:USERPROFILE\.spindb\bin" -ErrorAction SilentlyContinue | Where-Object { $_.Name -match 'weaviate' } | Format-Table -AutoSize
+          Write-Host ""
+          Write-Host "=== Weaviate log files ==="
+          Get-ChildItem -Path "$env:USERPROFILE\.spindb\containers\weaviate" -Filter "*.log" -Recurse -ErrorAction SilentlyContinue | ForEach-Object {
+            Write-Host "--- $($_.FullName) ---"
+            Get-Content $_.FullName -ErrorAction SilentlyContinue
+          }
+
+  # ============================================
   # CLI End-to-End Tests (PostgreSQL + SQLite)
   # ============================================
   test-cli-e2e:
@@ -2831,7 +2919,8 @@ jobs:
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
-    needs: [
+    needs:
+      [
         unit-tests,
         lint,
         hostdb-sync,
@@ -2854,6 +2943,7 @@ jobs:
         test-questdb,
         test-typedb,
         test-influxdb,
+        test-weaviate,
         test-cli-e2e,
         test-rename-clone,
         test-clickhouse-rename,
@@ -2875,7 +2965,7 @@ jobs:
             "test-valkey" "test-clickhouse" "test-qdrant"
             "test-meilisearch" "test-couchdb" "test-cockroachdb"
             "test-surrealdb" "test-questdb" "test-typedb"
-            "test-influxdb" "test-cli-e2e" "test-rename-clone"
+            "test-influxdb" "test-weaviate" "test-cli-e2e" "test-rename-clone"
             "test-clickhouse-rename" "test-fresh-install" "test-upgrade"
             "test-self-update" "test-docker-linux" "test-docker-export"
           )
@@ -2902,6 +2992,7 @@ jobs:
             "${{ needs.test-questdb.result }}"
             "${{ needs.test-typedb.result }}"
             "${{ needs.test-influxdb.result }}"
+            "${{ needs.test-weaviate.result }}"
             "${{ needs.test-cli-e2e.result }}"
             "${{ needs.test-rename-clone.result }}"
             "${{ needs.test-clickhouse-rename.result }}"
