--- a/tests/docker/Dockerfile
+++ b/tests/docker/Dockerfile
@@ -34,6 +34,7 @@
 # - Qdrant: qdrant (REST API engine - tests use curl instead of CLI)
 # - TypeDB: typedb, typedb_console_bin
 # - InfluxDB: influxdb3 (REST API engine - tests use curl instead of CLI)
+# - Weaviate: weaviate (REST/gRPC API engine - tests use curl instead of CLI)
 
 FROM ubuntu:22.04
 
